# hinawa

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  config.mk  main.cc  skia_path_example.txt  test.css  test.html
.github/workflows/: run_js_specs.yml  run_js_tests.yml  sonar-scanner.yml
browser/: CMakeLists.txt  browser.cc  browser.h  browser_window.cc  browser_window.h  painter.cc  painter.h  web_view.cc  web_view.h
css/: CMakeLists.txt  Makefile  component_value.h  css.cc  css.h  default.css  lex.ll  main.cc  parser.cc  parser.h  scanner.cc  scanner.h  selector.cc  selector.h  styled_node.cc  styled_node.h  stylesheet.cc  stylesheet.h  token.cc  token.h  value.h
data/: css_properties.json  default.css  homepage.html  img.html  js_alert.html  linked-page.html
data/homepage/: canvas.html  img.html  index.html  index2.html  js_alert.html  js_url.html  linked-page.html  whale.js
document/: CMakeLists.txt  Makefile  canvas_rendering_context_2d.cc  canvas_rendering_context_2d.h  document.cc  document.h  dom.cc  dom.h  element.cc  element.h  element_factory.cc  element_factory.h  html_canvas_element.cc  html_canvas_element.h  html_image_element.cc  html_image_element.h  node.cc  node.h  text.cc  text.h
gfx/: CMakeLists.txt  color.h  font_mgr.cc  font_mgr.h  painter.cc  painter.h
html/: CMakeLists.txt  Makefile  main.cc  parser.cc  parser.h  token.cc  token.h  tokenizer.cc  tokenizer.h
js/: CMakeLists.txt  Makefile  array.cc  array.h  ast_printer.h  cell.h  chunk.cc  chunk.h  codegen.cc  codegen.h  compiler.cc  compiler.h  date.cc  date.h  error.cc  error.h  function.cc  function.h  global_object.cc  global_object.h  heap.cc  heap.h  interpreter.cc  interpreter.h  lex.ll  main.cc  object.cc  object.h  object_string.cc  object_string.h  opcode.h  operator.h  parser.cc  parser.h  prelude.cc  prelude.h  primitive_string.h  scanner.cc  scanner.h  string.cc  (+9 more)
js/ast/: ast.cc  ast.h  expr.h  stmt.h  visitor.h
js/bindings/: canvas_rendering_context_2d_wrapper.cc  canvas_rendering_context_2d_wrapper.h  document_wrapper.cc  document_wrapper.h  html_canvas_element_wrapper.cc  html_canvas_element_wrapper.h  node_wrapper.cc  node_wrapper.h  wrapper.h
js/spec/: afterthought.js  harness.js
js/spec/object/: defineProperty.spec.js  hasOwnProperty.spec.js
js/spec/operators/: decrement.spec.js  increment.spec.js
js/test/: for.js  function.js  object_literal.js  object_literal.js.expect  run_tests.py  string.js
js/test/array/: array.js.expect  set.js
js/test/assignment/: local.js
js/test/closure/: closure.js
js/test/except/: omit_exception_var.js  omit_exception_var.js.expect
js/test/expression/: number.js.expect
js/test/function/: anonymous.js
js/test/if/: if_else.js.expect
js/test/this/: bound_method.js.expect
js/test/variable/: global_without_declaration.js  multiple_declarators.js.expect
layout/: CMakeLists.txt  block.cc  block.h  box.h  canvas.cc  canvas.h  coordinate.h  edges.h  image.cc  image.h  inline.cc  inline.h  layout_node.cc  layout_node.h  list.cc  list.h  node.cc  node.h  rect.h  text.cc  text.h
render/: CMakeLists.txt  Makefile  main.c  window.cc  window.h
test/: CMakeLists.txt
test/css/: selector_test.cc
test/js/: value_test.cc
test/js/language/: harness.js  run_tests.py
test/js/language/array/: array.js  array.js.expect  map.js  push.js  push.js.expect  trailing_comma.js
test/js/language/assignment/: assignment_expression.js.expect  global.js
test/js/language/closure/: assign_upvalue.js  closed_over_popped_local.js  closure_all_local.js  global_get_set.js
test/js/language/const/: assign_const_global_object.js
test/js/language/const/global/: assign_const.js  call_const_function.js
test/js/language/const/local/: call_const_function.js
test/js/language/const/upvalue/: assign_const.js  assign_const_object.js.expect  call_const_function.js
test/js/language/constructor/: basic.js  basic.js.expect  instanceof.js  prototype.js.expect
test/js/language/except/: error_stack.js  nested.js  reference_error.js.expect  try_catch.js  try_catch.js.expect
test/js/language/expression/: compound_assignment.js  hex_literal.js.expect  increment.js.expect  logical_operators.js  logical_operators.js.expect  modulo.js  modulo.js.expect  number.js  string.js  string.js.expect  ternary_operator.js  ternary_operator.js.expect  typeof.js  typeof.js.expect
test/js/language/function/: anonymous.js.expect  arrow_basic.js  arrow_basic.js.expect  default_return.js  function.js  function_expression_with_name.js  function_expression_with_name.js.expect
test/js/language/if/: if_else.js
test/js/language/loop/: break_basic.js  break_basic_for.js  continue_basic.js  continue_basic.js.expect  continue_with_local_variables.js  continue_with_local_variables.js.expect  do_while.js  while.js
test/js/language/new/: afterthought.js  harness.js
test/js/language/object/: getPrototypeOf.js  getPrototypeOf.js.expect  hasOwnProperty.js  subscript.js  trailing_comma.js
test/js/language/old/: run_tests.py
test/js/language/old/array/: set.js.expect
test/js/language/old/assignment/: assignment_expression.js  local.js.expect
test/js/language/old/constructor/: expression.js  expression.js.expect  prototype.js
test/js/language/old/except/: error_stack.js.expect  reference_error.js
test/js/language/old/expression/: compound_assignment.js.expect  hex_literal.js  increment.js  logical_operators.js.expect
test/js/language/old/function/: function.js.expect  immediately_invoked_function_expression.js
test/js/language/old/if/: if_else.js.expect
test/js/language/old/loop/: continue_basic_for.js
test/js/language/old/object/: getPrototypeOf.js.expect  hasOwnProperty.js.expect  subscript.js.expect
test/js/language/this/: bound_method.js
test/js/language/variable/: global.js  local.js  multiple_declarators.js
util/: color.h  hinawa.h  tree_node.h
web/: CMakeLists.txt  Makefile  http.cc  http.h  main.cc  resource.cc  resource.h  url.cc  url.h  url_parser.cc  url_parser.h
(+6 files in other folders)
